--- a/shopping_trends/shopping_analysis.ipynb
+++ b/shopping_trends/shopping_analysis.ipynb
@@ -564,6 +564,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Data cleaning and preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "convert some features to categorical features or boolean features or numerical features"
    ]
   },
@@ -958,6 +965,203 @@
    ],
    "source": [
     "shopping.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Purchase Amount (USD)</th>\n",
+       "      <th>Review Rating</th>\n",
+       "      <th>Previous Purchases</th>\n",
+       "      <th>High Spender</th>\n",
+       "      <th>Low Spender</th>\n",
+       "      <th>Loyalty Status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>3900.000000</td>\n",
+       "      <td>3900.000000</td>\n",
+       "      <td>3900.000000</td>\n",
+       "      <td>3900.000000</td>\n",
+       "      <td>3900.000000</td>\n",
+       "      <td>3900.000000</td>\n",
+       "      <td>3900.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>44.068462</td>\n",
+       "      <td>59.764359</td>\n",
+       "      <td>3.749949</td>\n",
+       "      <td>25.351538</td>\n",
+       "      <td>0.311282</td>\n",
+       "      <td>0.063846</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>15.207589</td>\n",
+       "      <td>23.685392</td>\n",
+       "      <td>0.716223</td>\n",
+       "      <td>14.447125</td>\n",
+       "      <td>0.463077</td>\n",
+       "      <td>0.244510</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>31.000000</td>\n",
+       "      <td>39.000000</td>\n",
+       "      <td>3.100000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>44.000000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>3.700000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>57.000000</td>\n",
+       "      <td>81.000000</td>\n",
+       "      <td>4.400000</td>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Age  Purchase Amount (USD)  Review Rating  Previous Purchases  \\\n",
+       "count  3900.000000            3900.000000    3900.000000         3900.000000   \n",
+       "mean     44.068462              59.764359       3.749949           25.351538   \n",
+       "std      15.207589              23.685392       0.716223           14.447125   \n",
+       "min      18.000000              20.000000       2.500000            1.000000   \n",
+       "25%      31.000000              39.000000       3.100000           13.000000   \n",
+       "50%      44.000000              60.000000       3.700000           25.000000   \n",
+       "75%      57.000000              81.000000       4.400000           38.000000   \n",
+       "max      70.000000             100.000000       5.000000           50.000000   \n",
+       "\n",
+       "       High Spender  Low Spender  Loyalty Status  \n",
+       "count   3900.000000  3900.000000          3900.0  \n",
+       "mean       0.311282     0.063846             0.0  \n",
+       "std        0.463077     0.244510             0.0  \n",
+       "min        0.000000     0.000000             0.0  \n",
+       "25%        0.000000     0.000000             0.0  \n",
+       "50%        0.000000     0.000000             0.0  \n",
+       "75%        1.000000     0.000000             0.0  \n",
+       "max        1.000000     1.000000             0.0  "
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shopping.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 3900 entries, 1 to 3900\n",
+      "Data columns (total 23 columns):\n",
+      " #   Column                    Non-Null Count  Dtype   \n",
+      "---  ------                    --------------  -----   \n",
+      " 0   Age                       3900 non-null   int64   \n",
+      " 1   Gender                    3900 non-null   category\n",
+      " 2   Item Purchased            3900 non-null   category\n",
+      " 3   Category                  3900 non-null   category\n",
+      " 4   Purchase Amount (USD)     3900 non-null   int64   \n",
+      " 5   Location                  3900 non-null   object  \n",
+      " 6   Size                      3900 non-null   category\n",
+      " 7   Color                     3900 non-null   category\n",
+      " 8   Season                    3900 non-null   category\n",
+      " 9   Review Rating             3900 non-null   float64 \n",
+      " 10  Subscription Status       3900 non-null   bool    \n",
+      " 11  Payment Method            3900 non-null   object  \n",
+      " 12  Shipping Type             3900 non-null   object  \n",
+      " 13  Discount Applied          3900 non-null   bool    \n",
+      " 14  Promo Code Used           3900 non-null   bool    \n",
+      " 15  Previous Purchases        3900 non-null   int64   \n",
+      " 16  Preferred Payment Method  3900 non-null   object  \n",
+      " 17  Frequency of Purchases    3900 non-null   object  \n",
+      " 18  kinds_shopping            3900 non-null   object  \n",
+      " 19  Kind_age                  3900 non-null   category\n",
+      " 20  High Spender              3900 non-null   int64   \n",
+      " 21  Low Spender               3900 non-null   int64   \n",
+      " 22  Loyalty Status            3900 non-null   int64   \n",
+      "dtypes: bool(3), category(7), float64(1), int64(6), object(6)\n",
+      "memory usage: 467.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "shopping.info()"
    ]
   },
   {
